# PreparationProjecDEZoomCamp

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
01-docker-terraform/docker-sql/: 00-setup-environment.md  02-virtual-environment.md  03-dockerizing-pipeline.md  05-data-ingestion.md  06-ingestion-script.md  07-pgadmin.md  08-dockerizing-ingestion.md  09-docker-compose.md  10-sql-refresher.md  11-cleanup.md
01-docker-terraform/docker-sql/pipeline/: Dockerfile  ingest_data.py  pipeline.py  pyproject.toml
01-docker-terraform/terraform/: 01-terraform_basic.md  02-terraform_with_variables
01-docker-terraform/terraform/terraform_with_variables/: terraform.tfstate  variables.tf
final-project-ref/: final-project-ref.md
final-project-ref/terraform/: main.tf  terraform.tfstate  variables.tf
pipeline/: 04-postgres-docker.md  05-data-ingestion.md  05-postgres-docker.md  06-ingestion-script.md  09-docker-compose.md  DataExploration.ipynb  Untitled.ipynb  ingest_data.py
