[project]
name = "pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.1",
    "pandas>=3.0.1",
    "psycopg[binary,pool]>=3.3.3",
    "pyarrow>=23.0.1",
    "sqlalchemy>=2.0.48",
    "tqdm>=4.67.3",
]
